test/Fail/Issue5848.agda
{-# OPTIONS  --confluence-check --cubical #-}

open import Agda.Builtin.Cubical.Path

l1 : PathP {!!} {!!} {!!}
l1 i = {!!}
